# xdlang

./: .gitignore  .pre-commit-config.yaml  README.md  grammar.lark  post.md  pyproject.toml  requirements.txt  setup.py  types.py  workspace.code-workspace  xdlang.lark
.github/workflows/: codeql-analysis.yml  coverage.yml
notebooks/: grammars.ipynb
test_programs/: func.xd  if_else.xd  infix.xd  int_expr.xd  let.xd  mut.xd  nested_while.xd  print_literal.xd  print_nl.xd  putchar_with_var.xd  scopes.xd  simple_let.xd  simple_putchar.xd  simple_return.xd  type_check.xd  while.xd
tests/: test_binary_op.py  test_const.py  test_let_stmt.py  test_literal.py
tests/ast/: _test_ast_arithmetic.py  _test_ast_cast.py  test_ast_block.py  test_ast_cast.py  test_ast_literal.py  test_ast_noop.py  test_ast_return.py
tests/parser/: test_let.py  test_mut.py  test_noop.py  test_parse_arithmetic.py  test_parse_literal.py  test_parser_arithmetic.py  test_parser_block.py  test_parser_cast.py  test_parser_noop.py  test_parser_return.py  test_return.py
tests/type_check/: test_type_check_expr.py  test_type_promotion.py
tests/xdast/: test_binary_op_node.py  test_int_literal_node.py
xdlang/: cli.py  codegen.py  compiler.py  errors.py  lookup_table.py  parser.py  run.py  symbol_table.py  symbol_table_printer.py  type_check.py  types.py  xd_ast.py  xd_ast_printer.py  xdast.py  xdtypes.py
xdlang/meta/: generate_visitor.py
xdlang/structures/: __init__.py  ast.py  errors.py  types.py  xd_ast.py
xdlang/visitors/: base_visitor.py  code_generator.py  codegen.py  parser.py  type_check.py  (+2 more)
(+5 files in other folders)
