[tool.poetry]
name = "xdlang"
version = "0.1.0"
description = ""
authors = ["Mateusz Bednarski <mateusz.bednarski@windowslive.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
lark = "^1.1.2"
rich = "^12.3.0"
llvmlite = "^0.38.0"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
